[WTEL-4680]: refactor models
